--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,28 +47,37 @@ nav:
   - Home:
     - Overview: index.md
   - Best practices:
-    - Overview: best-practices.md
-    - Key concepts: key-concepts/resource.md
-    - Code structure: code-structure.md
-    - Naming conventions: naming-conventions.md
-    - Security: security.md
-    - Compliance: compliance.md
-    - Monitoring: monitoring.md  
-  - Get started:
-    - get-started/index.md
-    - get-started/prerequisites.md
-    - get-started/syntax.md
-    - get-started/create-resources.md
-    - get-started/update-resources.md
-    - get-started/destroy-resources.md
-    - get-started/summary.md
+    - Overview: best-practices/best-practices.md
+    - Key concepts: best-practices/key-concepts.md
+    - Code structure: best-practices/code-structure.md
+    - Naming conventions: best-practices/naming-conventions.md
+    - Security: best-practices/security.md
+    - Compliance: best-practices/compliance.md
+    - Monitoring: best-practices/monitoring.md  
+  - Basics:
+    - Terraform:
+      - terraform/index.md
+      - terraform/prerequisites.md
+      - terraform/syntax.md
+      - terraform/create-resources.md
+      - terraform/update-resources.md
+      - terraform/destroy-resources.md
+      - terraform/summary.md
+    - Azure NoOps:
+      - noops/index.md
+      - noops/prerequisites.md
+      - noops/syntax.md
+      - noops/create-resources.md
+      - noops/update-resources.md
+      - noops/destroy-resources.md
+      - noops/summary.md
   - Reusable modules:
     - Module library: https://registry.terraform.io/search/modules?namespace=azurenoops&provider=azure
   - Deployment guide:
-    - Landing Zone Starter: landing-zone.md  
-    - Policy Starter: policy.md
-    - Sentinel Starter: sentinel.md
-    - Terraform Remote State: remote-state.md
+    - Landing Zone Starter: deployment/landing-zone.md  
+    - Policy Starter: deployment/policy.md
+    - Sentinel Starter: deployment/sentinel.md
+    - Terraform Remote State: deployment/remote-state-storage.md
   - Demos:
     - Overview: demos.md
   - FAQ:
