--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,11 +55,11 @@ nav:
     - Compliance: best-practices/compliance.md
     - Monitoring: best-practices/monitoring.md  
   - Basics:
+    - Use Case: terraform/use-case.md
     - Terraform:
       - terraform/index.md
       - terraform/prerequisites.md
       - terraform/syntax.md
-      - terraform/use-case.md
       - terraform/create-resources.md
       - terraform/update-resources.md
       - terraform/destroy-resources.md
@@ -68,7 +68,6 @@ nav:
       - noops/index.md
       - noops/prerequisites.md
       - noops/syntax.md
-      - noops/use-case.md
       - noops/create-resources.md
       - noops/update-resources.md
       - noops/destroy-resources.md
