--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,14 +46,11 @@ markdown_extensions:
 nav:
   - Home:
     - Overview: index.md
-  - Best practices:
-    - Overview: best-practices/best-practices.md
+  - Best practices:    
     - Key concepts: best-practices/key-concepts.md
     - Code structure: best-practices/code-structure.md
     - Naming conventions: best-practices/naming-conventions.md
-    - Security: best-practices/security.md
-    - Compliance: best-practices/compliance.md
-    - Monitoring: best-practices/monitoring.md  
+    - Security: best-practices/security.md    
   - Basics:
     - Terraform:
       - terraform/index.md
@@ -80,6 +77,11 @@ nav:
     - Policy Starter: deployment/policy.md
     - Sentinel Starter: deployment/sentinel.md
     - Terraform Remote State: deployment/remote-state-storage.md
+  - Developing Modules:
+    - Overview: developing-modules/overview.md
+    - Module structure: developing-modules/module-structure.md
+    - Module testing: developing-modules/module-testing.md
+    - Module documentation: developing-modules/module-documentation.md
   - Demos:
     - Overview: demos.md
   - FAQ:
