--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,12 +77,15 @@ nav:
     - Module structure: developing-modules/module-structure.md
     - Module testing: developing-modules/module-testing.md
     - Module documentation: developing-modules/module-documentation.md
-  - Deployment guide:
+  - Deployment guide:    
     - Landing Zone Starter:
-      - Manual Deployment: deployment/landing-zone-manual.md 
-      - GitHub Deployment: deployment/landing-zone-github.md 
+      - Overview: deployment/landing-zone.md
+      - deployment/landing-zone-planning.md
       - deployment/landing_zone_networking.md
-      - deployment/landing-zone-cleanup.md 
+      - Manual Deployment: deployment/landing-zone-manual.md 
+      - GitHub Deployment: deployment/landing-zone-github.md       
+      - deployment/landing-zone-cleanup.md
+      - deployment/landing-zone-faq.md 
     - Policy Starter: deployment/policy.md
     - Sentinel Starter: deployment/sentinel.md
     - Terraform Remote State: deployment/remote-state-storage.md
