--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,27 @@ nav:
     - Module structure: developing-modules/module-structure.md
     - Module testing: developing-modules/module-testing.md
     - Module documentation: developing-modules/module-documentation.md
+  - Platform Engineering:
+    - Overview: platform-engineering/overview.md
+    - Labs: 
+      - Azure Deployment Environments:    
+        - platform-engineering/labs/ade/index.md
+        - platform-engineering/labs/de/prerequisites.md
+        - platform-engineering/labs/ade/use-case.md
+        - platform-engineering/labs/ade/syntax.md      
+        - platform-engineering/labs/ade/create-resources.md
+        - platform-engineering/labs/ade/update-resources.md
+        - platform-engineering/labs/ade/destroy-resources.md
+        - platform-engineering/labs/ade/summary.md
+      - Backstage:    
+        - platform-engineering/labs/backstage/index.md
+        - platform-engineering/labs/backstage/prerequisites.md
+        - platform-engineering/labs/backstage/use-case.md
+        - platform-engineering/labs/backstage/syntax.md      
+        - platform-engineering/labs/backstage/create-resources.md
+        - platform-engineering/labs/backstage/update-resources.md
+        - platform-engineering/labs/backstage/destroy-resources.md
+        - platform-engineering/labs/backstage/summary.md
   - Deployment Guides:   
     - deployment/prerequisites.md 
     - Terraform Remote State: deployment/remote-state-storage.md
@@ -88,6 +109,15 @@ nav:
       - deployment/landing-zone/landing_zone_networking.md      
       - Manual Deployment: deployment/landing-zone/landing-zone-manual.md 
       - GitHub Deployment: deployment/landing-zone/landing-zone-github.md       
+      - deployment/landing-zone/landing-zone-cleanup.md
+      - deployment/landing-zone/landing-zone-faq.md 
+    - Mission Enclave Landing Zone Starter with AKS:
+      - Overview: deployment/landing-zone/landing-zone.md     
+      - deployment/landing-zone/landing-zone-planning.md
+      - deployment/landing-zone/landing_zone_networking.md      
+      - Manual Deployment: deployment/landing-zone/landing-zone-manual.md 
+      - GitHub Deployment: deployment/landing-zone/landing-zone-github.md 
+      - Configuration of AKS: deployment/landing-zone/landing-zone-aks.md      
       - deployment/landing-zone/landing-zone-cleanup.md
       - deployment/landing-zone/landing-zone-faq.md 
     - Mission Enclave Policy Starter:
