--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,25 +126,28 @@ nav:
     - Overview: faq.md
   - Platform Engineering Workshop:
     - Overview: platform-engineering/overview.md
+    - Get Started: platform-engineering/overview.md
+    - Prerequisites:  
+      - Azure Deployment Environments: platform-engineering/prerequisites/ade.md
+      - Backstage: platform-engineering/prerequisites/backstage.md
+    - Use Cases: 
+      - Azure Deployment Environments: platform-engineering/use-cases/ade.md
+      - Backstage: platform-engineering/use-cases/backstage.md
     - Labs: 
-      - Azure Deployment Environments:    
-        - platform-engineering/labs/ade/index.md
-        - platform-engineering/labs/de/prerequisites.md
-        - platform-engineering/labs/ade/use-case.md
+      - Azure Deployment Environments: 
         - platform-engineering/labs/ade/syntax.md      
         - platform-engineering/labs/ade/create-resources.md
         - platform-engineering/labs/ade/update-resources.md
         - platform-engineering/labs/ade/destroy-resources.md
         - platform-engineering/labs/ade/summary.md
-      - Backstage:    
-        - platform-engineering/labs/backstage/index.md
-        - platform-engineering/labs/backstage/prerequisites.md
-        - platform-engineering/labs/backstage/use-case.md
-        - platform-engineering/labs/backstage/syntax.md      
-        - platform-engineering/labs/backstage/create-resources.md
-        - platform-engineering/labs/backstage/update-resources.md
-        - platform-engineering/labs/backstage/destroy-resources.md
-        - platform-engineering/labs/backstage/summary.md
+      - Backstage:
+        - Working with Syntax: platform-engineering/labs/backstage/syntax.md      
+        - Install Backstage: platform-engineering/labs/backstage/install.md
+        - Configure Backstage: platform-engineering/labs/backstage/configuration.md
+        - Add Authentation: platform-engineering/labs/backstage/add-identity.md
+        - Add Plugins: platform-engineering/labs/backstage/plugins.md
+          - GitHub: platform-engineering/labs/backstage/add-github.md
+        - Summery: platform-engineering/labs/backstage/summary.md
 
 copyright: Copyright &copy; 2024 - Microsoft Corporation
 extra:
